--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.0.0)
 project(fortran-cpp)
 
 # 启用对Fortran语言的支持
-enable_language(Fortran C CXX)
+enable_language(Fortran C)
 
 # add_compile_options(-fPIC)
 
@@ -13,7 +13,7 @@ set(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")
 
 # 设置源文件和头文件路径
 # file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/*.f90 ${PROJECT_SOURCE_DIR}/*.cpp)
-include_directories(${PROJECT_SOURCE_DIR}/cppShared/)
+include_directories(${PROJECT_SOURCE_DIR}/cppShared/include)
 
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/*.f90 tem2.c)
 
