--- a/cppShared/CMakeLists.txt
+++ b/cppShared/CMakeLists.txt
@@ -7,8 +7,8 @@ enable_language(CXX C)
 set(CMAKE_CXX_STANDARD 11)
 
 # 设置头文件路径
-include_directories(${CMAKE_CURRENT_LIST_DIR}/)
-file(GLOB_RECURSE LIB_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/include/)
+file(GLOB_RECURSE LIB_SRC ${CMAKE_CURRENT_LIST_DIR}/source/*.cpp)
 
 # 生成
 add_library(cppShared SHARED ${LIB_SRC})
