--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,18 @@ cmake_minimum_required(VERSION 3.0.0)
 project(fortran-cpp)
 
 # 启用对Fortran语言的支持
-enable_language(Fortran C CXX)
+enable_language(Fortran CXX C)
+
 set(CMAKE_CXX_STANDARD 11)
 
 # add_compile_options(-fPIC)
 
-set(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")
+set(CMAKE_BUILD_TYPE RelWithDebInfo)
+# set(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")
 
 # 设置源文件和头文件路径
 include_directories(${PROJECT_SOURCE_DIR}/)
-file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/*.f90 ${PROJECT_SOURCE_DIR}/*.cpp)
+file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/*.f90 temp.c)
 
 # 添加源文件
 add_executable(${PROJECT_NAME} ${SRCS})
